# QuickRDP

./: .gitignore  README.md  about.html  build.bat  clean.bat  error.html  hosts.html  index.html  main.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: Appendix_A_Complete_QuickRDP_Walkthrough.md  Appendix_B_Common_Patterns_and_Recipes.md  Appendix_C_Troubleshooting_Guide.md  Appendix_D_Resources_and_Further_Learning.md  Chapter_01_Introduction_to_Rust.md  Chapter_02_Setting_Up_Development_Environment.md  Chapter_03_Understanding_Tauri_Architecture.md  Chapter_04_Your_First_Tauri_Application.md  Chapter_05_TypeScript_and_Frontend_Basics.md  Chapter_06_Styling_with_Tailwind_and_DaisyUI.md  Chapter_07_Multi_Window_Applications.md  Chapter_08_State_Management_and_Data_Flow.md  Chapter_09_Advanced_Features_and_Integration.md  Chapter_10_Tauri_Commands_The_Bridge.md  Chapter_11_Windows_API_Integration.md  Chapter_12_File_IO_and_Data_Persistence.md  Chapter_13_Windows_Credential_Manager.md  Chapter_14_Advanced_Error_Handling_and_Logging.md  Chapter_15_System_Tray_Integration.md  Chapter_16_LDAP_and_Active_Directory.md  Chapter_17_Process_Management_and_RDP.md  Chapter_18_Configuration_and_Settings.md  Chapter_19_Keyboard_Shortcuts_and_Global_Hotkeys.md  Chapter_20_Testing_Debugging_and_Performance.md  Chapter_21_Building_and_Distribution.md  GUIDE_PROGRESS.md  TABLE_OF_CONTENTS.md
src/: about.ts  error.ts  hosts.ts  main.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+3 files in other folders)
